// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icons/Icon Extra Small 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 20px;
  width: 20px;
  -webkit-flex: 0 0 20px;
  -ms-flex: 0 0 20px;
  flex: 0 0 20px;
  color: inherit;
}

.c0 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

<span
  className="c0"
  size="xs"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</span>
`;

exports[`Storyshots Icons/Icon Large 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 80px;
  width: 80px;
  -webkit-flex: 0 0 80px;
  -ms-flex: 0 0 80px;
  flex: 0 0 80px;
  color: inherit;
}

.c0 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

<span
  className="c0"
  size="lg"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</span>
`;

exports[`Storyshots Icons/Icon Medium 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 50px;
  width: 50px;
  -webkit-flex: 0 0 50px;
  -ms-flex: 0 0 50px;
  flex: 0 0 50px;
  color: inherit;
}

.c0 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

<span
  className="c0"
  size="md"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</span>
`;

exports[`Storyshots Icons/Icon Small 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: inherit;
}

.c0 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

<span
  className="c0"
  size="sm"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</span>
`;
